# gridics-zoning-cookbook

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  requirements.txt
gridics-forge/: .env.example  README.md  docker-compose.yml  pyproject.toml
gridics-forge/data/templates/: Municode-abilene tx.xlsx  zoning_template.xlsx
gridics-forge/scripts/: blank_template_dynamic_cells.py  compare_workbooks.py  embed_chunks.py  load_municode_export.py  normalize_municode_rows.py  report_sheet_mismatches.py  resolve_municode_overflow.py  resolve_truncated_source_nodes.py  run_pipeline.py  run_standardization_workflow.py
gridics-forge/sql/: 001_zoning_ingestion_schema.sql
gridics-forge/src/zoning_agno/: __init__.py
gridics-forge/tests/: test_blank_template_dynamic_cells.py  test_chunker.py  test_crossrefs.py  test_definitions.py  test_district_registry.py  test_embedder.py  test_embedding_settings.py  test_fact_pivot_export.py  test_ingest_municode.py  test_mismatch_report.py  test_municode_overflow.py  test_normalization_service.py  test_normalize_sections.py  test_retrieval_context_service.py  test_retriever.py  test_run_standardization_workflow.py  test_schema_compatibility.py  test_schemas.py  test_standardization_workflow_general.py  test_supplemental_pdf_facts.py  test_supplemental_sources.py  test_template_exporter.py  test_template_mapper.py  test_template_reader.py  test_use_crosswalk.py  test_use_interpretation.py  test_use_template_mapper.py  test_vector_store.py  test_workbook_compare.py
uzone/backend/: .dockerignore  Dockerfile.prod  alembic.ini  entrypoint.sh  pyproject.toml
uzone/backend/app/: __init__.py  agent_os.py  main.py
uzone/backend/evals/: assistant_red_team_cases.json
uzone/backend/tests/: __init__.py  conftest.py  test_agent_factory.py  test_agent_os.py  test_agent_tools.py  test_api_admin_routes.py  test_api_core_routes.py  test_assistant_conversation_review_service.py  test_assistant_guardrails_schema.py  test_assistant_telemetry_service.py  test_customer_zoning_agent.py  test_database_maintenance_service.py  (+15 more)
(+583 files in other folders)
