[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agno-zoning-starter"
version = "0.1.0"
description = "Starter Agno workflow for standardizing zoning ordinances into a Gridics-style workbook schema"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "OpenAI" }]
dependencies = [
  "agno>=2.5.10",
  "pydantic>=2.7.0",
  "pandas>=2.2.0",
  "openpyxl>=3.1.5",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "pgvector>=0.3.6",
  "python-dotenv>=1.0.1",
  "typer>=0.12.3",
  "httpx>=0.27.0",
  "google-genai>=1.30.0",
  "openai>=1.99.0",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.2",
  "pypdf>=6.0.0",
  "pdfplumber>=0.11.9",
  "rich>=13.7.1",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "groq",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
