[project]
name = "uzone-backend"
version = "0.1.0"
description = "Backend API for the UZone zoning verification platform"
requires-python = ">=3.11"
dependencies = [
  "agno[os]>=2.5.2,<3.0",
  "alembic>=1.13,<2.0",
  "beautifulsoup4>=4.12,<5.0",
  "cerebras-cloud-sdk>=1.0,<2.0",
  "email-validator>=2.2,<3.0",
  "fastapi>=0.115,<1.0",
  "google-genai>=1.0,<2.0",
  "groq>=0.9,<1.0",
  "httpx>=0.28,<1.0",
  "openai>=1.0,<2.0",
  "pgvector>=0.3,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.6,<3.0",
  "python-dotenv>=1.0,<2.0",
  "pyjwt[crypto]>=2.10,<3.0",
  "pytest>=8.3,<9.0",
  "reportlab>=4.2,<5.0",
  "requests>=2.31,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]
